# annotation-abuse

./: .gitattributes  LICENSE-MIT  README.md  pyproject.toml
.art/: settings.toml
annotation_abuse/: asts.py  notify.py
design/: REQ-asts.md  REQ-closures.md  REQ-notify.md  REQ-purpose.md  SPC-asts.md  SPC-notify.md
static/: artifact-frontend.js  artifact-frontend.wasm  initial.json
static/docs/: searchindex.js  searchindex.json
tests/: test_annotation_abuse.py  test_asts.py  test_notify.py
