[tool.poetry]
name = "annotation-abuse"
version = "0.1.0"
description = ""
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]

[tool.poetry.dependencies]
python = "*"
astpretty = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "^18.3-alpha.0"
hypothesis = "^3.66"
bpython = "^0.17.1"
pytest-mock = "^1.10"
